// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> renders the disabled state 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "elevation": 0,
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
      {
        "alignSelf": "auto",
        "backgroundColor": "#0059bf",
        "borderColor": "transparent",
        "borderRadius": 9999,
        "borderWidth": 0,
        "minHeight": 48,
        "opacity": 0.4,
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "includeFontPadding": false,
          },
          {
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0.1,
            "lineHeight": 20,
          },
          {
            "color": "#07090d",
          },
          {
            "color": "#ffffff",
          },
        ]
      }
    >
      Save
    </Text>
  </View>
</View>
`;

exports[`<Button> renders the ghost variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "elevation": 0,
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
      {
        "alignSelf": "auto",
        "backgroundColor": "transparent",
        "borderColor": "transparent",
        "borderRadius": 9999,
        "borderWidth": 0,
        "minHeight": 48,
        "opacity": 1,
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "includeFontPadding": false,
          },
          {
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0.1,
            "lineHeight": 20,
          },
          {
            "color": "#07090d",
          },
          {
            "color": "#0059bf",
          },
        ]
      }
    >
      OK
    </Text>
  </View>
</View>
`;

exports[`<Button> renders the loading state 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "elevation": 0,
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
      {
        "alignSelf": "auto",
        "backgroundColor": "#0059bf",
        "borderColor": "transparent",
        "borderRadius": 9999,
        "borderWidth": 0,
        "minHeight": 48,
        "opacity": 0.4,
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    color="#ffffff"
  />
</View>
`;

exports[`<Button> renders the primary variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "elevation": 0,
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
      {
        "alignSelf": "auto",
        "backgroundColor": "#0059bf",
        "borderColor": "transparent",
        "borderRadius": 9999,
        "borderWidth": 0,
        "minHeight": 48,
        "opacity": 1,
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "includeFontPadding": false,
          },
          {
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0.1,
            "lineHeight": 20,
          },
          {
            "color": "#07090d",
          },
          {
            "color": "#ffffff",
          },
        ]
      }
    >
      OK
    </Text>
  </View>
</View>
`;

exports[`<Button> renders the secondary variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "elevation": 0,
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
      {
        "alignSelf": "auto",
        "backgroundColor": "transparent",
        "borderColor": "#6c727a",
        "borderRadius": 9999,
        "borderWidth": 1,
        "minHeight": 48,
        "opacity": 1,
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "includeFontPadding": false,
          },
          {
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0.1,
            "lineHeight": 20,
          },
          {
            "color": "#07090d",
          },
          {
            "color": "#0059bf",
          },
        ]
      }
    >
      OK
    </Text>
  </View>
</View>
`;
